<resources>
    <string name="app_name">LastResort</string>
    <string name="action_settings">Settings</string>
    <string name="Result">" "</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSub">-</string>
    <string name="buttonMul">*</string>
    <string name="buttonDiv">%</string>
    <string name="buttonSlash">\"[num] / [num]\"</string>
    <string name="buttonEnd">=</string>
    <string name="textLast">here</string>
    <string name="ButtonClean">Clean</string>
</resources>
